--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
 /.idea/
-/WS2021_Java_Team_1_Appointments_6.iml
-/out/
