--- a/appointments-service/pom.xml
+++ b/appointments-service/pom.xml
@@ -11,6 +11,15 @@
 
     <artifactId>appointments-service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
