--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>appointments-service</module>
+
+        <module>appointments-client</module>
+
     </modules>
 
     <properties>
