--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,11 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>appointments-service</module>
-
         <module>appointments-client</module>
+        <module>person-client</module>
 
     </modules>
+
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
