--- a/appointments-service/pom.xml
+++ b/appointments-service/pom.xml
@@ -34,6 +34,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.22.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
