--- a/appointments-service/pom.xml
+++ b/appointments-service/pom.xml
@@ -64,6 +64,20 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- H2 Database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.212</version>
+        </dependency>
+
+        <!-- JPA Provider -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.6.8.Final</version>
+        </dependency>
     </dependencies>
 
 
