--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.fhe.appointment</groupId>
-    <artifactId>Java2 Appointment</artifactId>
+    <groupId>de.fhe</groupId>
+    <artifactId>appointment</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
